# ledgerflow

./: .env.example  .gitignore  CROSS_CHAIN_DEPLOYMENT.md  Cargo.toml  Justfile  MIGRATION_CLEANUP_REPORT.md  MIGRATION_SUMMARY.md  Makefile  README.md  UNICHAIN_DEPLOYMENT.md  UUPS_COMMANDS_ZH.md  UUPS_UPGRADE.md  alice_settle_payload.json  alice_sui_settle_payload.json  chain_config.env  config.toml  context7.json  deploy_unichain_sepolia.sh  final_sui_test_report.sh  foundry.toml
.github/: copilot-instructions.md
crates/ledgerflow-core/: Cargo.toml
crates/ledgerflow-core/benches/: verify_hot_path.rs
crates/ledgerflow-core/fuzz/: Cargo.toml
crates/ledgerflow-core/fuzz/fuzz_targets/: decode_warrant.rs
crates/ledgerflow-core/src/: constraint.rs  error.rs  lib.rs  proof_builder.rs  typestate.rs  verification.rs  warrant.rs
crates/ledgerflow-x402/: Cargo.toml
crates/ledgerflow-x402/fuzz/: Cargo.toml
crates/ledgerflow-x402/fuzz/fuzz_targets/: parse_extension.rs
crates/ledgerflow-x402/src/: extension.rs  lib.rs  middleware.rs  replay.rs
crates/ledgerflow-x402/tests/fixtures/: sample-payment.txt  sample-warrant.txt
docs/: orderId_removal_summary.md  scheme_exact_evm.md  scheme_exact_sui.md  spoon_integration_grant.md  x402_integration.md  x402_v2_chain_agnostic_architecture.md
ledgerflow-aptos-cli/: Cargo.toml  README.md  config.yaml.example
ledgerflow-aptos-cli-ts/: .gitignore  PROJECT_SUMMARY.md  README.md  biome.json  package.json  tsconfig.json
ledgerflow-aptos-cli/src/: cli.rs  client.backup.rs  client.rs  config.rs  main.rs
ledgerflow-balancer/: .gitignore  ACCOUNT_API.md  Cargo.toml  Justfile  LOGGING_ENHANCEMENT.md  Makefile  PROJECT_STATUS.md  README.md  SUMMARY.md  config.yaml.example  demo_logs.sh  example.sh  test_api.sh
ledgerflow-balancer/migrations/: 001_initial.sql
ledgerflow-balancer/src/: auth.rs  config.rs  database.rs  error.rs  handlers.rs  main.rs  models.rs  services.rs  utils.rs  x402.rs
ledgerflow-bot/: .env.example  .gitignore  Cargo.toml  Justfile  Makefile  PROJECT_STATUS.md  README.md  SUMMARY.md  config.example.yaml  config.yaml  config.yaml.example  example.sh
ledgerflow-bot/migrations/: 001_initial.sql  20250107000001_initial.sql
ledgerflow-bot/src/: bot.rs  config.rs  contracts.rs  database.rs  error.rs  handlers.rs  lib_utils.rs  main.rs  main_simple.rs  models.rs  notification.rs  services.rs  wallet.rs
ledgerflow-cli/: .gitignore  Cargo.toml  Makefile  PROJECT_STATUS.md  README.md  example.sh
ledgerflow-cli/src/: commands.rs  contracts.rs  lib_utils.rs  main.rs
ledgerflow-eth-cli/: .env.example  .gitignore  Cargo.toml  Justfile  Makefile  README.md  example.sh
ledgerflow-eth-cli/src/: commands.rs  contracts.rs  main.rs
ledgerflow-facilitator/: .env.example  .gitignore  Cargo.toml  DEVELOPMENT_PROGRESS.md  IMPLEMENTATION_REVIEW.md  README.md  config.example.toml  config.toml  config.yaml.example
ledgerflow-facilitator/examples/evm/: README.md  settle_request.base-sepolia.json  verify_request.base-sepolia.json  verify_request.ethereum-sepolia.json  verify_request.local-anvil.json
ledgerflow-facilitator/src/: config.rs  handlers.rs  lib.rs  main.rs  service.rs  types.rs
ledgerflow-facilitator/src/adapters/: evm.rs  mod.rs  offchain.rs
ledgerflow-facilitator/src/facilitators/: evm_facilirator.rs  mod.rs  sui_facilitator.rs
ledgerflow-facilitator/tests/: alice_test_payload.json  integration.rs  integration_tests.rs  v2_evm_adapter_tests.rs  v2_offchain_adapter_tests.rs
ledgerflow-facilitator/tests/legacy_v1/: README.md  alice_settle_payload.json  verify_payload.json
ledgerflow-indexer/: .gitignore  Cargo.toml  LOGGING_SUMMARY.md  PROJECT_STATUS.md  config.example.yaml  example.sh  ledgerflow_indexer.long-type-17142998208667206105.txt  test_logging.sh
ledgerflow-indexer-aptos/: Cargo.toml  README.md  config.yaml.example  warnings.txt
ledgerflow-indexer-aptos/migrations/202507161_deposit_events/: up.sql
ledgerflow-indexer-aptos/src/: config.rs  lib.rs  main.rs  models.rs  processor.rs  schema.rs
ledgerflow-indexer-evm/: Cargo.toml  Justfile  LOGGING.md  Makefile  README.md  SUMMARY.md  setup.sh  test.sh
ledgerflow-indexer-evm/src/: database.rs  main.rs
ledgerflow-indexer-sui/: Cargo.toml  README.md  config.yaml.example  example.sh
ledgerflow-indexer-sui/migrations/: 001_initial_schema.sql
ledgerflow-indexer-sui/src/: config.rs  database.rs  health.rs  main.rs  models.rs  processor.rs
ledgerflow-indexer/migrations/: 001_initial.sql
ledgerflow-indexer/src/: config.rs  database.rs  indexer.rs  main.rs  types.rs
ledgerflow-mcp/: Cargo.toml  README.md
ledgerflow-mcp/src/: main.rs
ledgerflow-migrations/: Cargo.toml  Dockerfile  INTEGRATION.md  Justfile  Makefile  PROJECT_STATUS.md  README.md  config.yaml.example  demo.sh  migrate.sh
ledgerflow-migrations/migrations/: 001_initial_schema.sql  002_financial_integrity.sql  20250709000001_initial_schema.sql
ledgerflow-migrations/src/: main.rs
ledgerflow-sdk-frontend/: Cargo.toml  README.md  package.json
ledgerflow-sdk-frontend/src/: lib.rs
ledgerflow-sdk-py/: Cargo.toml  README.md  pyproject.toml
ledgerflow-sdk-py/src/: lib.rs
ledgerflow-sdk-rs/: Cargo.toml  README.md
ledgerflow-sdk-rs/src/: client.rs  error.rs  lib.rs  models.rs  utils.rs  wasm_client.rs
ledgerflow-sdk-rs/tests/: client_tests.rs
ledgerflow-sdk-ts/: Cargo.toml  README.md  package.json
ledgerflow-sdk-ts/src/: lib.rs
ledgerflow-sui-cli/: Cargo.toml  README.md  config.example.toml  config.yaml.example
ledgerflow-sui-cli/src/: cli.rs  client.rs  config.rs  main.rs
ledgerflow-vault/: .gitignore  CROSS_CHAIN_DEPLOYMENT.md  FIX_REPORT.md  README.md  foundry.toml  (+2 more)
ledgerflow-vault-aptos/: DEPLOYMENT.md  Justfile  Makefile  Move.toml  PROJECT_STATUS.md  README.md  demo.sh
ledgerflow-vault-evm/: .gitignore  CROSS_CHAIN_DEPLOYMENT.md  Justfile  README.md  UNICHAIN_DEPLOYMENT.md  UUPS_UPGRADE.md  demo_prediction.sh  deploy_multichain.sh  remappings.txt
ledgerflow-vault-sui/: .gitignore  Justfile  LICENSE  Makefile  Move.toml  README.md  config.env
(+62 files in other folders)
