[workspace]
members = [
    "ledgerflow-balancer",
    "ledgerflow-bot",
    "ledgerflow-eth-cli",
    "ledgerflow-indexer-evm",
    "ledgerflow-indexer-aptos",
    "ledgerflow-indexer-sui",
    "ledgerflow-migrations",
    "ledgerflow-aptos-cli",
    "ledgerflow-sui-cli",
]
resolver = "2"

[workspace.dependencies]
# Web framework
axum = "0.8.4"
tokio = "1.47.1"
tokio-test = "0.4.4"
tower-http = "0.6.6"

# Database
sqlx = "0.8.6"

# CLI
clap = "4.5.45"

# Configuration
config = "0.15.14"
serde = "1.0.219"
serde_json = "1.0.143"
serde_yaml = "0.9.33"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Error handling
color-eyre = "0.6.5"
eyre = "0.6.12"
thiserror = "2.0.15"

# Utilities
chrono = "0.4.41"

# Crypto
hex = "0.4.3"
rand = "0.9.2"
sha3 = "0.10.8"

# Ethereum/EVM interaction
alloy = "1.0.24"

# Diesel (for Aptos indexer compatibility)
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", tag = "aptos-indexer-processor-sdk-v2.1.1" }
bigdecimal = { version = "0.4.8", features = ["serde"] }
diesel = "=2.2.0"
diesel_migrations = "=2.2.0"

# Telegram Bot Framework
teloxide = "0.17.0"

# HTTP client
reqwest = "0.12.23"

# QR code generation
image = "0.25.6"
qrcode = "0.14.1"

# UUID generation
uuid = "1.18.0"

# Base64 encoding
base64 = "0.22.1"
bcs = "0.1.6"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", rev = "b9cdbaf36bf2a83438d9f660e5a708c82ed60d8e" }
