[workspace]
members = [
    "ledgerflow-balancer",
    "ledgerflow-bot",
    "ledgerflow-eth-cli",
    "ledgerflow-indexer-evm",
    "ledgerflow-indexer-aptos",
    "ledgerflow-indexer-sui",
    "ledgerflow-migrations",
    "ledgerflow-sui-cli",
    "ledgerflow-facilitator",
    "ledgerflow-mcp",
]
exclude = [
    "ledgerflow-aptos-cli",  # Excluded due to jemalloc conflict with indexer-aptos
]
resolver = "2"

[workspace.dependencies]
# Web framework
axum = "0.8.6"
tokio = "1.48.0"
tokio-test = "0.4.4"
tower-http = "0.6.6"

# Database
sqlx = "0.8.6"

# CLI
clap = "4.5.49"

# Configuration
config = "0.15.18"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml = "0.9.33"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Error handling
color-eyre = "0.6.5"
eyre = "0.6.12"
thiserror = "2.0.17"

# Utilities
chrono = "0.4.42"

# Crypto
hex = "0.4.3"
rand = "0.9.2"
sha3 = "0.10.8"

# Ethereum/EVM interaction
alloy = "1.0.38"

# Diesel (for Aptos indexer compatibility)
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", tag = "aptos-indexer-processor-sdk-v2.1.1" }
bigdecimal = { version = "0.4.8", features = ["serde"] }
diesel = "=2.2.0"
diesel_migrations = "=2.2.0"

# Telegram Bot Framework
teloxide = "0.17.0"

# HTTP client
reqwest = "0.12.24"

# QR code generation
image = "0.25.8"
qrcode = "0.14.1"

# UUID generation
uuid = "1.18.1"

# Base64 encoding
base64 = "0.22.1"
bcs = "0.1.6"

# Sui SDK and related dependencies
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", package = "sui-json-rpc-types" }
sui-keys = { git = "https://github.com/MystenLabs/sui", package = "sui-keys" }
sui-rpc-api = { git = "https://github.com/MystenLabs/sui", package = "sui-rpc-api" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types" }

# URL handling
url = "2.5"

# Decimal arithmetic
rust_decimal = "1.39.0"

# Numeric traits
num-traits = "0.2"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", rev = "b9cdbaf36bf2a83438d9f660e5a708c82ed60d8e" }
