[workspace]
members = [
    "ledgerflow-balancer",
    "ledgerflow-bot",
    "ledgerflow-eth-cli",
    "ledgerflow-indexer-evm",
    "ledgerflow-indexer-aptos",
    "ledgerflow-indexer-sui",
    "ledgerflow-migrations",
    "ledgerflow-sui-cli",
    "ledgerflow-facilitator",
    "ledgerflow-mcp",
    "ledgerflow-sdk-rs",
    "ledgerflow-sdk-frontend",  # WASM bindings — deps gated on target_arch = "wasm32"
]
exclude = [
    "ledgerflow-aptos-cli", # Excluded due to jemalloc conflict with indexer-aptos
    "ledgerflow-sdk-py",    # Python bindings — must be built via maturin, not cargo build
    "ledgerflow-sdk-ts",    # Node.js/TypeScript bindings — must be built via napi-cli
]
resolver = "3"

[workspace.dependencies]
# Web framework
axum = "0.8.8"
tokio = "1.49.0"
tokio-test = "0.4.5"
tower-http = "0.6.8"

# Database
sqlx = "0.8.6"

# CLI
clap = "4.5.60"

# Configuration
config = "0.15.19"
serde = "1.0.228"
serde_json = "1.0.149"
serde_yaml = "0.9.34"

# Logging and tracing
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

# Error handling
color-eyre = "0.6.5"
eyre = "0.6.12"
thiserror = "2.0.18"

# Utilities
chrono = "0.4.44"

# Crypto
hex = "0.4.3"
rand = "0.10.0"
sha3 = "0.10.8"

# Ethereum/EVM interaction
alloy = "1.7.3"

# Diesel (for Aptos indexer compatibility)
aptos-indexer-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processor-sdk.git", tag = "aptos-indexer-processor-sdk-v2.1.1" }
bigdecimal = { version = "0.4.10", features = ["serde"] }
diesel = "=2.2.0"
diesel_migrations = "=2.2.0"

# Telegram Bot Framework
teloxide = "0.17.0"

# HTTP client
hpx = "2.3.1"

# QR code generation
image = "0.25.9"
qrcode = "0.14.1"

# UUID generation
uuid = "1.21.0"

# Base64 encoding
base64 = "0.22.1"
bcs = "0.1.6"

# Sui SDK and related dependencies
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", package = "sui-json-rpc-types" }
sui-keys = { git = "https://github.com/MystenLabs/sui", package = "sui-keys" }
sui-rpc-api = { git = "https://github.com/MystenLabs/sui", package = "sui-rpc-api" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types" }

# URL handling
url = "2.5"

# Decimal arithmetic
rust_decimal = "1.40.0"

# Numeric traits
num-traits = "0.2"

# x402 protocol core types (v2 + CAIP-2)
x402-types = "1.4.1"

[patch.crates-io]
merlin = { git = "https://github.com/aptos-labs/merlin" }
