[package]
name = "ledgerflow-aptos-cli"
version = "0.1.0"
edition = "2024"
authors = ["LedgerFlow Team"]
description = "Command-line interface for interacting with LedgerFlow Aptos payment vault contracts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/longcipher/ledgerflow"

[dependencies]
# Aptos SDK for blockchain interaction
aptos-sdk = { git = "https://github.com/aptos-labs/aptos-core", branch = "devnet", default-features = false }

# CLI framework
clap = { version = "4.5.49", features = ["derive"] }
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
# Error handling
color-eyre = "0.6.5"
eyre = "0.6.12"
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.33"
# Utilities
config = "0.15.18"
hex = "0.4.3"
# HTTP client for REST API
reqwest = { version = "0.12.24", features = ["json"] }
