[package]
name = "ledgerflow-balancer"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors", "trace"] }

# Database
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }

# CLI
clap = { workspace = true, features = ["derive"] }

# Configuration
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# Error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true, features = ["serde"] }

# Crypto
alloy = { workspace = true, features = ["signer-local", "k256"] }
base64 = { workspace = true }
hex = { workspace = true }
sha3 = { workspace = true }
