[package]
name = "ledgerflow-bot"
version = "0.1.0"
edition = "2021"
description = "Telegram Bot for LedgerFlow payment system"
authors = ["LedgerFlow Team"]
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { version = "4.5.40", features = ["derive"] }

# Error handling
color-eyre = "0.6.5"
eyre = "0.6.12"

# Async runtime
tokio = { version = "1.46.1", features = ["full"] }

# Telegram Bot Framework
teloxide = { version = "0.16.0", features = [
    "macros",
    "webhooks",
    "redis-storage",
] }

# Database
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

# Ethereum/EVM interaction
alloy = { version = "1.0.17", features = ["full"] }

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.12.22", features = ["json"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# UUID generation
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4.41", features = ["serde"] }

# Configuration
config = "0.15.11"

# Cryptography
hex = "0.4.3"
rand = "0.9.1"

# QR code generation
image = "0.25.6"
qrcode = "0.14.1"

# Error types
thiserror = "2.0.12"

# YAML serialization
serde_yaml = "0.9.33"

# Base64 encoding
base64 = "0.22.1"
