[package]
name = "ledgerflow-bot"
version = "0.1.0"
edition = "2021"
description = "Telegram Bot for LedgerFlow payment system"
authors = ["LedgerFlow Team"]
license = "MIT"

[dependencies]
# CLI argument parsing
clap = { workspace = true, features = ["derive"] }

# Error handling
color-eyre = { workspace = true }
eyre = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Telegram Bot Framework
teloxide = { workspace = true, features = [
    "macros",
    "webhooks",
    "redis-storage",
] }

# Database
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

# Ethereum/EVM interaction
alloy = { workspace = true, features = ["full"] }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4", "serde"] }

# Date/time handling
chrono = { workspace = true, features = ["serde"] }

# Configuration
config = { workspace = true }

# Cryptography
hex = { workspace = true }
rand = { workspace = true }

# QR code generation
image = { workspace = true }
qrcode = { workspace = true }

# Error types
thiserror = { workspace = true }

# YAML serialization
serde_yaml = { workspace = true }

# Base64 encoding
base64 = { workspace = true }
