[package]
name = "ledgerflow-bot"
version = "0.1.0"
edition = "2024"
description = "Telegram Bot for LedgerFlow payment system"

[dependencies]
# Error handling
eyre = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Command-line argument parsing
clap = { workspace = true, features = ["derive"] }

# Telegram Bot Framework
teloxide = { workspace = true, features = [
    "macros",
    "webhooks",
    "redis-storage",
] }

# Database
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }

# Ethereum/EVM interaction
alloy = { workspace = true, features = ["full"] }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# HTTP client
reqwest = { workspace = true, features = ["json"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

# Date/time handling
chrono = { workspace = true, features = ["serde"] }

# Configuration
config = { workspace = true }

# Cryptography
hex = { workspace = true }
rand = { workspace = true }

# QR code generation
image = { workspace = true }
qrcode = { workspace = true }

# Error types
thiserror = { workspace = true }

# YAML serialization
serde_yaml = { workspace = true }

# UUID generation
uuid = { workspace = true, features = ["v4"] }

# Base64 encoding
base64 = { workspace = true }
