[package]
name = "ledgerflow-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for interacting with LedgerFlow PaymentVault contract"
authors = ["longcipher"]

[dependencies]
alloy = { version = "1.0.17", features = ["full"] }
clap = { version = "4.5.40", features = ["derive"] }
eyre = "0.6.12"
tokio = { version = "1.46.1", features = ["full"] }
