[package]
name = "ledgerflow-eth-cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool for interacting with LedgerFlow PaymentVault contract on Ethereum"

[dependencies]
alloy = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
tokio = { workspace = true, features = ["full"] }
