[package]
name = "ledgerflow-facilitator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/longcipher/ledgerflow"
description = "LedgerFlow facilitator server implementing the x402 spec (verify/settle)"

[dependencies]
# Workspace-pinned deps
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }

# Sui SDK and related crates
sui-types = { workspace = true }
sui-rpc-api = { workspace = true }
sui-keys = { workspace = true }
sui-sdk = { workspace = true }
sui-json-rpc-types = { workspace = true }

# EVM/Ethereum interaction
alloy = { workspace = true }

# Cryptography and serialization
hex = "0.4"
base64 = "0.22"
blake2 = "0.10"
bcs = { workspace = true }
url = { workspace = true }
rust_decimal = "1.33"
once_cell = "1.19"
regex = "1.10"
async-trait = "0.1"

# misc
dotenvy = "0.15"
rand = "0.8"

[features]
telemetry = []

[lib]
name = "ledgerflow_facilitator"
path = "src/lib.rs"

[dev-dependencies]
axum-test = "18.0.0"
serde_json = { workspace = true }
eyre = { workspace = true }
tokio-test = "0.4"
proptest = "1.4"
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
