[package]
name = "ledgerflow-facilitator"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/longcipher/ledgerflow"
description = "LedgerFlow chain-agnostic x402 v2 facilitator with offchain/CEX adapter support"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { workspace = true, features = ["trace", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
color-eyre = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
uuid = { workspace = true, features = ["v4"] }

async-trait = "0.1"
dotenvy = "0.15"
x402-types = { workspace = true }

[features]
telemetry = []

[lib]
name = "ledgerflow_facilitator"
path = "src/lib.rs"

[dev-dependencies]
axum-test = "18.7.0"
serde_json = { workspace = true }
eyre = { workspace = true }
tokio-test = { workspace = true }

[package.metadata.docs.rs]
all-features = true
