[package]
name = "ledgerflow-indexer-evm"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
