[package]
name = "ledgerflow-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.0.17", features = ["full"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
eyre = "0.6.12"
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.33"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
    "chrono",
] }
tokio = { version = "1.46.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
