[package]
name = "ledgerflow-mcp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/longcipher/ledgerflow"
description = "MCP server exposing x402 verify/settle/supported tools for LedgerFlow"

[dependencies]
ultrafast-mcp = { version = "202506018.1.0", features = ["full"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
eyre = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
hpx = { workspace = true, features = ["json"] }
x402-types = { workspace = true }
async-trait = "0.1"

dotenvy = "0.15"
serde.workspace = true

[features]
default = []
# Enable HTTP transport by enabling ultrafast-mcp's HTTP feature set
http = ["ultrafast-mcp/http-with-auth"]

[dev-dependencies]
axum.workspace = true

[package.metadata.docs.rs]
all-features = true
