[package]
name = "ledgerflow-migrations"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ledgerflow-migrations"
path = "src/main.rs"

[dependencies]
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
