[package]
name = "ledgerflow-sdk-py"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/longcipher/ledgerflow"
description = "LedgerFlow SDK Python bindings via PyO3"

[lib]
name = "ledgerflow_sdk"
crate-type = ["cdylib"]

[dependencies]
ledgerflow-sdk-rs = { path = "../ledgerflow-sdk-rs", features = ["native"] }
pyo3 = { version = "0.28", features = ["extension-module"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
