[package]
name = "ledgerflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ciborium.workspace = true
serde = { workspace = true, features = ["derive"] }
sha2 = "0.10.9"
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "verify_hot_path"
harness = false
