[package]
name = "ledgerflow-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
ciborium.workspace = true
ed25519-dalek.workspace = true
rand_core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_bytes = "0.11.19"
sha2 = "0.10.9"
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "verify_hot_path"
harness = false
